# corrosion-dylib

./: .gitignore  Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json
src/cdylib/: CMakeLists.txt  Cargo.toml  package.xml
src/dylib/: CMakeLists.txt  Cargo.toml  package.xml
src/rlib/: CMakeLists.txt  Cargo.toml  package.xml
src/staticlib/: CMakeLists.txt  Cargo.toml  package.xml
src/staticlib/src/: lib.rs
